@@ -9,7 +9,7 @@
             "rct2.scenery_large.sspx",
             "fidwell.scenery_large.sspx",
             "rct2.scenery_large.scln",
-            "$DAT:0C58B202|IRESCLNC",
+            "fidwell.scenery_large.scln",
             "rct2.scenery_large.spyr",
             "fidwell.scenery_large.spyr",
             "rct2.scenery_small.tes1",
