@@ -1,0 +1,88 @@
+{
+    "id": "fidwell.scenery_large.scln",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "originalId": "0C58B202|IRESCLNC|621AF65A",
+    "sourceGame": ["custom"],
+    "objectType": "scenery_large",
+    "properties": {
+        "price": 120,
+        "removalPrice": -100,
+        "cursor": "CURSOR_HOUSE_DOWN",
+        "hasPrimaryColour": true,
+        "tiles": [
+            {
+                "x": 0,
+                "y": 0,
+                "clearance": 40,
+                "hasSupports": true,
+                "walls": 9
+            },
+            {
+                "x": 0,
+                "y": 32,
+                "clearance": 40,
+                "hasSupports": true,
+                "walls": 3
+            },
+            {
+                "x": 32,
+                "y": 0,
+                "clearance": 40,
+                "hasSupports": true,
+                "walls": 12
+            },
+            {
+                "x": 32,
+                "y": 32,
+                "clearance": 40,
+                "hasSupports": true,
+                "walls": 6
+            }
+        ]
+    },
+    "images": [
+      { "path": "images/00.png", "x": -31, "y": 4 },
+      { "path": "images/01.png", "x": -31, "y": 4 },
+      { "path": "images/02.png", "x": -31, "y": 4 },
+      { "path": "images/03.png", "x": -31, "y": 4 },
+      { "path": "images/04.png", "x": 0, "y": 0 },
+      { "path": "images/05.png", "x": 0, "y": -32 },
+      { "path": "images/06.png", "x": -32, "y": -64 },
+      { "path": "images/07.png", "x": -27, "y": -32 },
+      { "path": "images/08.png", "x": 0, "y": -32 },
+      { "path": "images/09.png", "x": -32, "y": -64 },
+      { "path": "images/10.png", "x": -27, "y": -32 },
+      { "path": "images/11.png", "x": 0, "y": 0 },
+      { "path": "images/12.png", "x": -27, "y": -32 },
+      { "path": "images/13.png", "x": 0, "y": 0 },
+      { "path": "images/14.png", "x": 0, "y": -32 },
+      { "path": "images/15.png", "x": -32, "y": -64 },
+      { "path": "images/16.png", "x": -32, "y": -64 },
+      { "path": "images/17.png", "x": -27, "y": -32 },
+      { "path": "images/18.png", "x": 0, "y": 0 },
+      { "path": "images/19.png", "x": 0, "y": -32 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Colonnade",
+            "de-DE": "Säulengang",
+            "es-ES": "Columnata",
+            "it-IT": "Colonnato",
+            "nl-NL": "Zuilenrij",
+            "sv-SE": "Allé",
+            "ko-KR": "콜로네이드",
+            "zh-CN": "柱廊",
+            "zh-TW": "柱廊",
+            "pt-BR": "Colunata",
+            "cs-CZ": "Kolonáda",
+            "ja-JP": "並木",
+            "pl-PL": "Kolumnada",
+            "ru-RU": "Колоннада",
+            "fr-FR": "Colonnade",
+            "eo-ZZ": "Kolonaro",
+            "ca-ES": "Arcades",
+            "fi-FI": "Kolonnadi"
+        }
+    }
+}
