@@ -17,6 +17,7 @@
 - Fixed object: Sandstone Skyscraper Walkway (rct2tt.scenery_small.futsky01)
 - Updated object: Roman Colosseum (rct2.scenery_large.scol)
 - Updated object: Roman Column (rct2.scenery_small.trc)
+- Updated object: Colonnade (rct2.scenery_large.scln)
 - Removed: Some redundant custom objects
 
 2.0 (2023-02-26)
